# Data-Structure-for-C

./: CMakeLists.txt
examples/: CMakeLists.txt  example_1.c  example_2.c
include/DS/: array.h  graph.h  node.h  utils.h
src/: CMakeLists.txt  array.c  graph.c  node.c  utils.c
